--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>json</artifactId>
             <version>20171018</version>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-charts</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
