--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>json</artifactId>
             <version>20171018</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin.addons</groupId>
+            <artifactId>stackpanel</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
