--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>kz.bittrade</groupId>
     <artifactId>BitTradeFx</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
     <name>BitTradeFx</name>
 
     <prerequisites>
