--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,16 @@
             <artifactId>stackpanel</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.vaadin.alump</groupId>
+            <artifactId>notify</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-context-menu</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
