--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <artifactId>vaadin-context-menu</artifactId>
             <version>2.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-charts</artifactId>
+            <version>4.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
