--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>vaadin-charts</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.21.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
