--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,17 +2,20 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
-
     <servlet>
         <servlet-name>HelloWorldServlet</servlet-name>
         <servlet-class>kz.bittrade.com.HelloServlet</servlet-class>
     </servlet>
 
-    <!-- Note: All <servlet> elements MUST be grouped together and
-          placed IN FRONT of the <servlet-mapping> elements -->
-
     <servlet-mapping>
         <servlet-name>HelloWorldServlet</servlet-name>
         <url-pattern>/.well-known/acme-challenge/KAI60O0iyjRXQrDJKRWzs8myGnKiKCjbkqLoX_q9vHg</url-pattern>
     </servlet-mapping>
+
+    <resource-ref>
+        <description>Main DB</description>
+        <res-ref-name>jdbc/bittradefx</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
