--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>8.5.23</version>
+        </dependency>
     </dependencies>
 
     <build>
