--- a/pom.xml
+++ b/pom.xml
@@ -117,9 +117,9 @@
             <version>4.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.21.0.1</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
